--- a/About.html
+++ b/About.html
@@ -145,7 +145,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
                     <h1 class="mb-4">Welcome to Education</h1>
-                    <p class='fs-5' style="text-align: justify;">Welcome to Education, where education meets innovation. Founded in 2020, our mission is to provide an engaging learning environment that empowers individuals to thrive academically. Our team, comprised of experienced educators and passionate professionals, is dedicated to delivering high-quality courses that blend traditional knowledge with cutting-edge insights. With a commitment to excellence, we aim to inspire a love for learning and equip our learners with the skills they need for success. Explore our diverse range of courses and join us on a journey of knowledge and growth.</p>
+                    <p class='fs-5' style="text-align: justify;">Welcome to Education, where education meets innovation. Founded in 2020, our mission is to provide an engaging learning environment that empowers individuals to thrive academically. Our team, comprised of experienced educators and passionate professionals, is dedicated to delivering high-quality courses that blend traditional knowledge with cutting-edge insights. With a commitment to excellence, we aim to inspire a love for learning and equip our learners with the skills they need for. Explore our diverse range of courses and join us on a journey of knowledge and growth.</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
