--- a/calculator.html
+++ b/calculator.html
@@ -71,7 +71,10 @@
     <div class="container">
         <h2 class="text-center">Simple Calculator</h2>
         <div class="calculator card bg-light">
-            <input type="text" class="calculator-screen form-control" disabled>
+            <div class="calculator-screen-wrapper">
+                <input type="text" class="calculator-screen form-control process" disabled>
+                <input type="text" class="calculator-screen form-control result" disabled>
+            </div>
             <div class="calculator-keys row">
                 <!-- Numbers and operators -->
                 <div class="col-3">
@@ -135,7 +138,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
@@ -143,9 +146,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Mirpur 10, Dhaka, Bangladesh</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0.0.0.0.0.0</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@education.bd.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -157,28 +160,29 @@
                     <h4 class="text-white mb-3">Gallery</h4>
                     <div class="row g-2 pt-2">
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
                         </div>
                         <div class="col-4">
                             <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
                         </div>
                         <div class="col-4">
                             <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p class="text-justify">Sign up to submit your newsletter. You'll receive a confirmation once it's
+                        approved and published.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button"
@@ -191,12 +195,13 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Abid All Nafish</a>,  All Right Reserved.
-                
+                        &copy; <a class="border-bottom" href="#">Abid All Nafish</a>, All Rights Reserved.
+
+
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="">Home</a>
+                            <a href="index.html">Home</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
@@ -227,74 +232,58 @@
     <script src="js/main.js"></script>
 
     <!-- Bootstrap JS and Popper.js -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const screen = document.querySelector('.calculator-screen');
-            const buttons = document.querySelectorAll('.calculator-keys button');
-            let currentInput = '';
-            let previousInput = '';
-            let operator = '';
+        const processScreen = document.querySelector('.calculator-screen.process');
+        const resultScreen = document.querySelector('.calculator-screen.result');
+        const keys = document.querySelector('.calculator-keys');
 
-            function updateScreen(value) {
-                screen.value = value;
+        // Function to update the process screen
+        function updateProcess(value) {
+            processScreen.value += value;
+        }
+
+        // Function to update the result screen with evaluation
+        function updateResult() {
+            try {
+                resultScreen.value = eval(processScreen.value);
+            } catch (error) {
+                resultScreen.value = 'Error';
             }
+        }
 
-            function handleClear() {
-                currentInput = '';
-                previousInput = '';
-                operator = '';
-                updateScreen('');
-            }
-
-            function handleEqual() {
-                if (currentInput && previousInput && operator) {
-                    try {
-                        currentInput = eval(`${previousInput}${operator}${currentInput}`).toString();
-                        updateScreen(currentInput);
-                        previousInput = '';
-                        operator = '';
-                    } catch (error) {
-                        updateScreen('Error');
-                    }
-                }
-            }
-
-            function handleOperator(value) {
-                if (currentInput) {
-                    if (previousInput && operator) {
-                        currentInput = eval(`${previousInput}${operator}${currentInput}`).toString();
-                    }
-                    operator = value;
-                    previousInput = currentInput;
-                    currentInput = '';
-                }
-            }
-
-            function handleNumber(value) {
-                if (currentInput === '0' && value !== '.') {
-                    currentInput = value;
+        // Event listener for button clicks
+        keys.addEventListener('click', event => {
+            const { target } = event;
+            if (target.matches('button')) {
+                const value = target.textContent.trim();
+                if (value === '=') {
+                    updateResult();
+                } else if (value === 'C') {
+                    processScreen.value = '';
+                    resultScreen.value = '';
                 } else {
-                    currentInput += value;
+                    updateProcess(value);
                 }
-                updateScreen(currentInput);
             }
+        });
 
-            buttons.forEach(button => {
-                button.addEventListener('click', function () {
-                    const value = this.textContent;
-
-                    if (value === 'C') {
-                        handleClear();
-                    } else if (value === '=') {
-                        handleEqual();
-                    } else if (['+', '-', '*', '/'].includes(value)) {
-                        handleOperator(value);
-                    } else {
-                        handleNumber(value);
-                    }
-                });
-            });
+        // Event listener for keyboard input
+        document.addEventListener('keydown', event => {
+            const { key } = event;
+            if (!isNaN(key) || key === '.' || ['+', '-', '*', '/', 'Enter'].includes(key)) {
+                event.preventDefault();
+                if (key === 'Enter') {
+                    updateResult();
+                } else {
+                    updateProcess(key);
+                }
+            } else if (key === 'Backspace') {
+                event.preventDefault();
+                processScreen.value = processScreen.value.slice(0, -1);
+            } else if (key === 'Escape') {
+                processScreen.value = '';
+                resultScreen.value = '';
+            }
         });
     </script>
 
