new nav toggler

--- a/about.html
+++ b/about.html
@@ -65,6 +65,23 @@
                 <a href="about.html" class="nav-item nav-link active">About</a>
             </div>
         </div>
+        <style>
+            .navbar-toggler-icon {
+                background-image: url(img/clipart1101213.png) !important;
+                height: 1.6em !important;
+                width: 1.6em !important;
+            }
+    
+            .navbar-toggler {
+                border-color: white !important;
+            }
+    
+            .navbar-toggler:focus,
+            .navbar-toggler:active {
+                outline: none;
+                box-shadow: none;
+            }
+        </style>
     </nav><br><br><br>
     <!-- Navbar End -->
 
