--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
             </div>
         </div>
     </nav>
+    <style>
+        .navbar-toggler-icon {
+            background-image: url(img/clipart1101213.png) !important;
+            height: 1.6em !important;
+            width: 1.6em !important;
+        }
+
+        .navbar-toggler {
+            border-color: white !important;
+        }
+
+        .navbar-toggler:focus,
+        .navbar-toggler:active {
+            outline: none;
+            box-shadow: none;
+        }
+    </style>
     <!-- Navbar End -->
 
 
@@ -197,7 +214,6 @@
         </div>
     </div>
     <!-- About End -->
-
 
     <!-- Education Start -->
     <div class="container-xxl py-5 category">
