--- a/syllabus.html
+++ b/syllabus.html
@@ -66,6 +66,23 @@
             </div>
         </div>
     </nav>
+    <style>
+        .navbar-toggler-icon {
+            background-image: url(img/clipart1101213.png) !important;
+            height: 1.6em !important;
+            width: 1.6em !important;
+        }
+
+        .navbar-toggler {
+            border-color: white !important;
+        }
+
+        .navbar-toggler:focus,
+        .navbar-toggler:active {
+            outline: none;
+            box-shadow: none;
+        }
+    </style>
     <!-- Navbar End -->
 
     <div class="mt-5"><br><br><br><br><br><br><br>
