navbar toggler border transparent

--- a/calculator.html
+++ b/calculator.html
@@ -158,7 +158,7 @@
                 }
 
                 .navbar-toggler {
-                    border-color: white !important;
+                    border-color: rgba(255, 255, 255, 0) !important;
                 }
 
                 .navbar-toggler:focus,
