--- a/calender.html
+++ b/calender.html
@@ -151,7 +151,7 @@
             }
     
             .navbar-toggler {
-                border-color: white !important;
+                border-color: rgba(255, 255, 255, 0) !important;
             }
     
             .navbar-toggler:focus,
