--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         }
 
         .navbar-toggler {
-            border-color: white !important;
+            border-color: rgba(255, 255, 255, 0) !important;
         }
 
         .navbar-toggler:focus,
