--- a/syllabus.html
+++ b/syllabus.html
@@ -153,7 +153,7 @@
         }
 
         .navbar-toggler {
-            border-color: white !important;
+            border-color: rgba(255, 255, 255, 0) !important;
         }
 
         .navbar-toggler:focus,
