--- a/about.html
+++ b/about.html
@@ -48,7 +48,6 @@
     <!-- Spinner End -->
 
     <!-- Navigation Start -->
-
     <div class="navigation fixed-top custom-shadow d-flex justify-content-center align-items-center">
         <a href="index.html" class="navbar-brand d-flex align-items-center mb-2 mt-1"
             style="margin-right: 0px!important; margin-left: 13px!important;">
@@ -58,7 +57,6 @@
             <li class="list">
                 <a href="index.html">
                     <span class="icon">
-                        <!-- <ion-icon name="home-outline"></ion-icon> -->
                         <ion-icon name="home"></ion-icon>
                     </span>
                     <span class="text">Home</span>
@@ -68,7 +66,6 @@
             <li class="list">
                 <a href="syllabus.html">
                     <span class="icon">
-                        <!-- <ion-icon name="person-outline"></ion-icon> -->
                         <ion-icon name="document"></ion-icon>
                     </span>
                     <span class="text">Syllabus</span>
@@ -78,9 +75,7 @@
             <li class="list">
                 <a href="calender.html">
                     <span class="icon">
-                        <!-- <ion-icon name="chatbubble-outline"></ion-icon> -->
                         <ion-icon name="calendar-sharp"></ion-icon>
-
                     </span>
                     <span class="text">Calender</span>
                     <span class="circle"></span>
@@ -89,7 +84,6 @@
             <li class="list">
                 <a href="calculator.html">
                     <span class="icon">
-                        <!-- <ion-icon name="camera-outline"></ion-icon> -->
                         <ion-icon name="Calculator"></ion-icon>
                     </span>
                     <span class="text">Calculator</span>
@@ -99,7 +93,6 @@
             <li class="list active">
                 <a href="about.html">
                     <span class="icon">
-                        <!-- <ion-icon name="settings-outline"></ion-icon> -->
                         <ion-icon name="person"></ion-icon>
                     </span>
                     <span class="text">About</span>
@@ -124,7 +117,6 @@
         list.forEach((item) =>
             item.addEventListener('click', activeLink));
     </script>
-
     <!-- Navigation End -->
 
     <!-- Navbar Start -->
@@ -180,7 +172,7 @@
     <div class="container-xxl py-5 mt-5">
         <div class="container">
             <div class="row g-4">
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-3 col-sm-6 col-6 wow fadeInUp" data-wow-delay="0.1s">
                     <a href="syllabus.html">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
@@ -190,7 +182,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-3 col-sm-6 col-6 wow fadeInUp" data-wow-delay="0.5s">
                     <a href="calender.html">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
@@ -200,7 +192,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="col-lg-3 col-sm-6 col-6 wow fadeInUp" data-wow-delay="0.7s">
                     <a href="calculator.html">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
@@ -210,7 +202,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-3 col-sm-6 col-6 wow fadeInUp" data-wow-delay="0.3s">
                     <a href="about.html">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
