new loader added

--- a/calender.html
+++ b/calender.html
@@ -48,9 +48,7 @@ background-position: 950px 35px;
     <!-- Spinner Start -->
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border text-primary spinner-border" style="width: 3rem; height: 3rem;" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
+        <span class="loader"></span>
     </div>
     <!-- Spinner End -->
 
@@ -171,8 +169,8 @@ background-position: 950px 35px;
             style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div><br><br>
 
-     <!-- Footer Start -->
-     <div class="container-fluid text-light mb-0 footer wow fadeIn" data-wow-delay="0.1s">
+    <!-- Footer Start -->
+    <div class="container-fluid text-light mb-0 footer wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
