--- a/about.html
+++ b/about.html
@@ -40,9 +40,20 @@
 <body>
     <!-- Spinner Start -->
     <div id="spinner"
-        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <span class="loader"></span>
-    </div>
+    class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <span class="loader"></span>
+</div>
+<script>
+    window.addEventListener("load", function () {
+      const spinner = document.getElementById("spinner");
+      spinner.classList.add("show");
+  
+      // Wait for 1 second before hiding the spinner
+      setTimeout(function () {
+        spinner.classList.remove("show");
+      }, 1000); // 1 second delay
+    });
+  </script>
     <!-- Spinner End -->
 
     <!-- Navigation Start -->
