--- a/calculator.html
+++ b/calculator.html
@@ -43,6 +43,17 @@
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <span class="loader"></span>
     </div>
+    <script>
+        window.addEventListener("load", function () {
+          const spinner = document.getElementById("spinner");
+          spinner.classList.add("show");
+      
+          // Wait for 1 second before hiding the spinner
+          setTimeout(function () {
+            spinner.classList.remove("show");
+          }, 1000); // 1 second delay
+        });
+      </script>
     <!-- Spinner End -->
 
     </head>
